--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "emoji-mart": "^5.6.0",
     "export-to-csv": "^1.4.0",
     "input-otp": "^1.4.2",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.562.0",
     "next": "^15.5.9",
     "next-themes": "^0.4.6",
