--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-table": "^8.21.3",
+    "@uploadthing/react": "^7.3.3",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -52,6 +54,7 @@
     "embla-carousel-react": "^8.6.0",
     "emoji-mart": "^5.6.0",
     "export-to-csv": "^1.4.0",
+    "framer-motion": "^12.26.2",
     "input-otp": "^1.4.2",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
@@ -68,11 +71,13 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.7.4",
     "vaul": "^1.1.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.91.2",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
