--- a/package.json
+++ b/package.json
@@ -57,12 +57,14 @@
 		"emoji-mart": "^5.6.0",
 		"export-to-csv": "^1.4.0",
 		"framer-motion": "^12.26.2",
+		"groq-sdk": "^0.37.0",
 		"input-otp": "^1.4.2",
 		"jspdf": "^4.0.0",
 		"jspdf-autotable": "^5.0.7",
 		"lucide-react": "^0.562.0",
 		"next": "^15.5.9",
 		"next-themes": "^0.4.6",
+		"openai": "^6.17.0",
 		"react": "^19",
 		"react-countup": "^6.5.3",
 		"react-day-picker": "^9.13.0",
