--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"next": "^15.5.9",
 		"next-themes": "^0.4.6",
 		"openai": "^6.17.0",
+		"papaparse": "^5.5.3",
 		"react": "^19",
 		"react-countup": "^6.5.3",
 		"react-day-picker": "^9.13.0",
@@ -84,6 +85,7 @@
 		"@tanstack/react-query-devtools": "^5.91.2",
 		"@types/canvas-confetti": "^1.9.0",
 		"@types/node": "^22",
+		"@types/papaparse": "^5.5.2",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"dotenv-cli": "^8.0.0",
