--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
 		"tailwindcss-animate": "^1.0.7",
 		"uploadthing": "^7.7.4",
 		"vaul": "^1.1.2",
-		"zod": "^3.25.76"
+		"zod": "^3.25.76",
+		"zustand": "^5.0.11"
 	},
 	"devDependencies": {
 		"@tanstack/react-query-devtools": "^5.91.2",
